Updated recipe css
Recipe add class header placed container div to enclose image caption and paragraph

CSS add flex-box properties  Center image caption paragraph

--- a/recipes.css/recipe-card.css
+++ b/recipes.css/recipe-card.css
@@ -38,9 +38,34 @@
 
 */
 
-.recipe {
+.recipe-title h1 {
+    display: flex;
+    justify-content: center;
     font-size: 5rem;
     font-weight: 900;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: hsl(45, 100%, 50%);
+    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.flex-items, .caption,
+.recipe-intro {
+  width: 800px;
+  margin: 10px;
+  text-align: center;
+}
+
+.image {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
